# rsserpent-plugin-qidian

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
rsserpent_plugin_qidian/: __init__.py
rsserpent_plugin_qidian/booklist/: __init__.py  detail.py  latest.py
tests/: test_route.py
